design-system-fragment/kustomize/overlays/baso-prod/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: fragment-ingress
spec:
  rules:
    - host: design-system-fragment.baso-prod.enjoy-platform.net
      http:
        paths:
          - backend:
              service:
                name: fragment-svc
                port:
                  number: 8081
            pathType: ImplementationSpecific
status:
  loadBalancer: {}
